crates/tui/tests/storybook/snapshots/app_transcript_view_state__compaction_preview_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─────────────────────── compacting ────────────────────────










  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
