crates/tui/tests/storybook/snapshots/app_transcript_view_state__compaction_preview_block_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─────────────────────── compacting ────────────────────────
# Goal
Summarize earlier turns while preserving the active task.

# Progress
- Read the transcript model.
- Added a streaming preview block.
- Kept the final checkpoint marker separate.

# Next steps
Update stories and run focused tests.
  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
