crates/tui/tests/storybook/snapshots/app_transcript_view_state__process_status_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background process 4210 finished successfully
  3 lines



  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
