crates/tui/tests/storybook/snapshots/app_transcript_view_state__process_status_block_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background process 4210 finished successfully
  Compiling project
  12 tests passed
  Finished successfully

  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
